--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="organization_photo">Foto da organização</string>
     <string name="get_animals">Ver Animais para Adoção</string>
     <string name="search_by_district">Pesquisar por distrito</string>
+    <string name="continuar">Continuar</string>
 </resources>
