--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,27 @@
     <string name="get_animals">Ver Animais para Adoção</string>
     <string name="search_by_district">Pesquisar por distrito</string>
     <string name="continuar">Continuar</string>
+    <string name="desapearing_date">Data de desaparecimento</string>
+    <string name="street">Rua</string>
+    <string name="streer">Introduza a rua</string>
+
+    <!--  Spinners prompt message  -->
+    <string name="select_specie">Selecione a espécie</string>
+    <string name="select_subspecie">Selecione a sub-espécie</string>
+    <string name="select_furcolor">Selecione a cor do pêlo</string>
+    <string name="select_fur_length">Selecione o comprimento do pêlo</string>
+    <string name="select_size">Selecione o porte</string>
+    <string name="select_district">Selecione o distrito</string>
+
+    <string name="insert_city">Introduza a cidade</string>
+
+    <string name="set_location">Marcar localização</string>
+    <string name="dash">-</string>
+    <string name="location_simbol_image">Simbolo da localização</string>
+    <string name="upload_picture">Upload Imagem</string>
+    <string name="animal_picture">Foto do animal</string>
+    <string name="insert_date">Introduza a data</string>
+    <string name="insert_street">Introduza a rua</string>
+
+
 </resources>
