PROJ-9 Publish #in progress

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,5 +85,7 @@
     <string name="insert_date">Introduza a data</string>
     <string name="insert_street">Introduza a rua</string>
     <string name="insert_city">Introduza a cidade</string>
+    <string name="update_missing_animal">Editar Animal Perdido</string>
+    <string name="update_found_animal">Editar Animal Perdido</string>
 
 </resources>
