changes xml activity_post_animal and activity_organization_details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,7 +87,7 @@
 
 
 
-    <string name="set_location">Marcar localização</string>
+    <string name="set_location">Obter localização</string>
     <string name="dash">-</string>
     <string name="location_simbol_image">Simbolo da localização</string>
     <string name="upload_picture">Upload Imagem</string>
