--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
     <string name="descriptionimganimal">DescriptionImgAnimal</string>
     <string name="detailsAnimal_name">Nome:</string>
     <string name="detailsAnimal_ChipiId">ChipId:</string>
-    <string name="detailsAnimal_nature">Naturesa:</string>
+    <string name="detailsAnimal_nature">Espécie:</string>
     <string name="detailsAnimal_breed">Raça:</string>
     <string name="detailsAnimal_sex">Sexo:</string>
     <string name="detailsAnimal_size">Porte:</string>
@@ -67,7 +67,6 @@
     <string name="select_fur_length">Selecione o comprimento do pêlo</string>
     <string name="prompt_select_size">Selecione o porte</string>
     <string name="prompt_select_district">Selecione o distrito</string>
-
 
 
     <string name="set_location">Obter localização</string>
@@ -135,5 +134,7 @@
     <string name="msg_enter_fur_length">Selecione o tamanho do pêlo</string>
     <string name="select_district">Selecione o distrito</string>
     <string name="introduza_a_motiva_o_pela_qual_quer_adotar_este_animal">Introduza a motivação pela qual quer adotar este animal</string>
+    <string name="new_adoption_animal">New Adoption Animal</string>
+    <string name="new_adoption_animal_desc">Notification channel to aler the user of a new adoption animal available</string>
 
 </resources>
