--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,5 +136,6 @@
     <string name="introduza_a_motiva_o_pela_qual_quer_adotar_este_animal">Introduza a motivação pela qual quer adotar este animal</string>
     <string name="new_adoption_animal">New Adoption Animal</string>
     <string name="new_adoption_animal_desc">Notification channel to aler the user of a new adoption animal available</string>
+    <string name="title_main_fragment">Home</string>
 
 </resources>
