--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="longitude">Longitude</string>
     <string name="searchAnimal">Pesquisar Animais</string>
     <string name="searchAssociation">Pesquisar Associações</string>
-    <string name="myAnimals">Meus Animais</string>
+    <string name="myAnimals">Minhas Publicações</string>
     <string name="postWanderingAnimal">Reportar Animal Errante</string>
     <string name="postLostAnimal">Reportar Animal Perdido</string>
     <string name="ndOpen">Abrir</string>
